--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,14 @@
             <artifactId>lombok</artifactId>
             <version>1.18.36</version>
         </dependency>
-        <!--<dependency>
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>12.2.0.jre11</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>-->
+        </dependency>
     </dependencies>
 </project>
