--- a/.github/workflows/main_fcc-service.yml
+++ b/.github/workflows/main_fcc-service.yml
@@ -12,8 +12,6 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    permissions:
-      contents: read #This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -24,8 +22,20 @@ jobs:
           java-version: '17'
           distribution: 'microsoft'
 
+      - name: Check current directory
+        run: pwd  # Prints the current directory
+
+      - name: List all files in the workspace
+        run: ls -R 
+
       - name: Build with Maven
         run: mvn clean install
+
+      - name: List contents of workspace directory
+        run: ls -l ${{ github.workspace }}
+
+      - name: List contents of target directory
+        run: ls -l ${{ github.workspace }}/target
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -40,15 +50,17 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write # This is required for requesting the JWT
 
     steps:
+      - name: Verify downloaded artifact
+        run: ls -R 
+
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: java-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -63,4 +75,3 @@ jobs:
           app-name: 'fcc-service'
           slot-name: 'Production'
           package: '*.jar'
-          
