--- a/.github/workflows/main_fccdata.yml
+++ b/.github/workflows/main_fccdata.yml
@@ -12,8 +12,6 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    permissions:
-      contents: read #This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -24,8 +22,20 @@ jobs:
           java-version: '17'
           distribution: 'microsoft'
 
+      - name: Check current directory
+        run: pwd  # Prints the current directory
+
+      - name: List all files in the workspace
+        run: ls -R 
+
       - name: Build with Maven
         run: mvn clean install
+
+      - name: List contents of workspace directory
+        run: ls -l ${{ github.workspace }}
+
+      - name: List contents of target directory
+        run: ls -l ${{ github.workspace }}/target
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -44,6 +54,9 @@ jobs:
       contents: read #This is required for actions/checkout
 
     steps:
+      - name: Verify downloaded artifact
+        run: ls -R
+            
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
